--- a/app/views/transactions/show.html.haml
+++ b/app/views/transactions/show.html.haml
@@ -1,1 +1,1 @@
-%h1 Congratulations! You traded #{number_to_currency(@transaction.amount_in_cents/100.0)} for #{@transaction.btc} bitcoins. The bitcoins have been transferred to #{@transaction.bitcoin_address}.
+%h1 Congratulations! You traded #{number_to_currency(@transaction.usd)} for #{@transaction.btc} bitcoins. The bitcoins have been transferred to #{@transaction.bitcoin_address}.
