--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <div class="col-xs-12">
         <%= link_to root_path do %>
           <%= image_tag 'logo.png', class: 'logo' %>
-          <h1>BitcoinExchange.io</h1>
+          <h1>Bitcoin Exchange</h1>
         <% end %>
         <nav>
       </div>
