--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,9 +1,9 @@
 <h1>What</h1>
 <p>BitcoinExchange is a marketplace to exhange US dollars for bitcoins.</p>
 <h1>Why</h1>
-<p>BitcoinExhange aims to be the easiest solution for aquiring bitcoins. It is meant to lower the barrier to entry into the bitcoin currency. Transactions must be $20 USD or less. For larger transactions a more features I recommend <%= link_to 'coinbase', 'https://coinbase.com/' %>.</p>
+<p>BitcoinExhange aims to be the easiest solution for aquiring bitcoins. It is meant to lower the barrier to entry into the bitcoin currency. Transactions must be $20 USD or less. For larger transactions and more features <%= link_to 'Coinbase.com', 'https://coinbase.com/' %> is recommened.</p>
 
 <h1>How do I know this isn't a scam?</h1>
-<p>The short answer is you don't. A list of <%= link_to 'all the transactions', transactions_path %> carried out on BitcoinExchange is publicly available. The source code to the site is also publicly available. Check external soures to verify that this is a legitmate exchange.</p>
+<p>The short answer is you don't. A list of <%= link_to 'all the transactions', transactions_path %> carried out on BitcoinExchange is publicly available. The source code to the site is also publicly available. Check external sources to verify that this is a legitmate exchange.</p>
 <h1>Open Source</h1>
 <p>Bitcoin exchange is open source. The source code is available <%= link_to 'on github', 'https://www.github.com/masonforest/bitcoin-exchange' %>. Please contribute back! You can also run your own bitcoin exchange for profit!</p>
