--- a/app/views/transactions/new.html.haml
+++ b/app/views/transactions/new.html.haml
@@ -2,7 +2,8 @@
   %h1 Sorry, there are no bitcoins left to sell at this exchange.
   %h1 Please check back soon.
 - else
-  %p Amount left to be distrubuted at this exchange: #{btc_remaining} BTC, #{usd_remaining}
+  %p Exchange rate at this exchange: 1 BTC = #{exchange_rate}
+  %p Amount left to be distrubuted at this exchange: #{btc_remaining} BTC = #{usd_remaining}
   = simple_form_for @transaction_form, url: transactions_path do |f|
     = f.input :stripe_token, as: :hidden
     .row
