--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
-<h1>What</h1>
-<p>BitcoinExchange is a marketplace to exhange US dollars for bitcoins.</p>
-<h1>Why</h1>
-<p>BitcoinExhange aims to be the easiest solution for aquiring bitcoins. It is meant to lower the barrier to entry into the bitcoin currency. Transactions must be $20 USD or less. For larger transactions and more features <%= link_to 'Coinbase.com', 'https://coinbase.com/' %> is recommened.</p>
+<h1>What is Bitcoin Exchange?</h1>
+<p>Bitcoin Exchange is a marketplace to exchange US dollars for bitcoins.</p>
+<h1>Why another bitcoin exchange?</h1>
+<p>BitcoinExhange aims to be the easiest solution for aquiring bitcoins. It is meant to lower the barrier to entry into the bitcoin currency. Transactions must be $20 USD or less. For larger transactions, a better exchange rate and more features <%= link_to 'Coinbase.com', 'https://coinbase.com/' %> is recommened.</p>
 
 <h1>How do I know this isn't a scam?</h1>
 <p>The short answer is you don't. A list of <%= link_to 'all the transactions', transactions_path %> carried out on BitcoinExchange is publicly available. The source code to the site is also publicly available. Check external sources to verify that this is a legitmate exchange.</p>
