--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,3 +7,5 @@
 <p>The short answer is you don't. A list of <%= link_to 'all the transactions', transactions_path %> carried out on BitcoinExchange is publicly available. The source code to the site is also publicly available. Check external sources to verify that this is a legitmate exchange.</p>
 <h1>Open Source</h1>
 <p>Bitcoin exchange is open source. The source code is available <%= link_to 'on github', 'https://www.github.com/masonforest/bitcoin-exchange' %>. Please contribute back! You can also run your own bitcoin exchange for profit!</p>
+<h1>Contact</h1>
+<p>For support or other inquiries email mason@bitcoin-exchange.io</p>
