Show date and time of transaction

--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -4,6 +4,7 @@
       <th>USD (at the time of the transaction)</th>
       <th>BTC</th>
       <th>Bitcoin Address</th>
+      <th>Date and Time of Transaction</th>
     </tr>
   </thead>
 <% @transactions.each do |transaction| %>
@@ -11,6 +12,7 @@
     <td><%= number_to_currency(transaction.usd) %></td>
     <td><%= transaction.btc %></td>
     <td><%= link_to transaction.bitcoin_address, "http://blockexplorer.com/address/#{transaction.bitcoin_address}", target: '_blank' %></td>
+    <td><%= time_ago_in_words transaction.created_at %></td>
   </tr>
 <% end %>
 </table>
