--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -12,7 +12,7 @@
     <td><%= number_to_currency(transaction.usd) %></td>
     <td><%= transaction.btc %></td>
     <td><%= link_to transaction.bitcoin_address, "http://blockexplorer.com/address/#{transaction.bitcoin_address}", target: '_blank' %></td>
-    <td><%= time_ago_in_words transaction.created_at %></td>
+    <td><%= time_ago_in_words transaction.created_at %> ago</td>
   </tr>
 <% end %>
 </table>
