--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BitcoinExchange</title>
+  <title>OverpricedBitcoin</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= stripe_javascript_tag %>
@@ -20,7 +20,7 @@
       <div class="col-xs-12">
         <%= link_to root_path do %>
           <%= image_tag 'logo.png', class: 'logo' %>
-          <h1>BitcoinExchange</h1>
+          <h1>OverpricedBitcoin</h1>
         <% end %>
         <nav>
       </div>
