--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,10 +1,10 @@
-<h1>What is OverpricedBitcoin?</h1>
-<p>OverpricedBitcoin is a marketplace to exchange US dollars for bitcoins.</p>
+<h1>What is FiveKBits?</h1>
+<p>FiveKBits is a marketplace to exchange US dollars for bitcoins.</p>
 <h1>Why another bitcoin exchange?</h1>
 <p>BitcoinExhange aims to be the easiest solution for aquiring bitcoins. It is meant to lower the barrier to entry into the bitcoin currency. Transactions must be $20 USD or less. For larger transactions, a better exchange rate and more features <%= link_to 'Coinbase.com', 'https://coinbase.com/' %> is recommened.</p>
 
 <h1>How do I know this isn't a scam?</h1>
-<p>The short answer is you don't. A list of <%= link_to 'all the transactions', transactions_path %> carried out on OverpricedBitcoin is publicly available. The source code to the site is also publicly available. Check external sources to verify that this is a legitmate exchange.</p>
+<p>The short answer is you don't. A list of <%= link_to 'all the transactions', transactions_path %> carried out on FiveKBits is publicly available. The source code to the site is also publicly available. Check external sources to verify that this is a legitmate exchange.</p>
 <h1>Open Source</h1>
 <p>Bitcoin exchange is open source. The source code is available <%= link_to 'on github', 'https://www.github.com/masonforest/bitcoin-exchange' %>. Please contribute back! You can also run your own bitcoin exchange for profit!</p>
 <h1>Contact</h1>
