--- a/app/views/transactions/new.html.haml
+++ b/app/views/transactions/new.html.haml
@@ -3,15 +3,15 @@
   %h1 Please check back soon.
 - else
   .panel.panel-danger
-    .panel-heading OverpricedBitcoin does not condone illegal activities.
+    .panel-heading FiveKBits does not condone illegal activities.
     .panel-body
       Transactions are limited to $20 per credit card to
       prevent fraud and other illegal activities.
-      OverpricedBitcoin will abide by all Federal and State laws as they are created.
+      FiveKBits will abide by all Federal and State laws as they are created.
   %p Exchange rate at this exchange: 1 BTC = #{exchange_rate}
   %p Amount left to be distrubuted at this exchange: #{btc_remaining} BTC = #{usd_remaining}
   = simple_form_for @transaction_form, url: transactions_path do |f|
-    = f.input :stripe_token, as: :hidden
+    = f.input :card_uri, as: :hidden
     .row
       .col-xs-7
         .row.amount
@@ -37,7 +37,7 @@
           .col-xs-12
             = f.input :message
       .col-xs-5
-        = f.input :credit_card_number, input_html: { value: ('4242 4242 4242 4242' if Rails.env.development?), name: nil }
+        = f.input :credit_card_number, input_html: { value: ('4111 1111 1111 1111' if Rails.env.development?), name: nil }
         .row
           .col-xs-6
             = f.input :expiration_date, input_html: { value: ('01 / 20' if Rails.env.development?) ,name: nil }
