--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -19,6 +19,11 @@ header {
   }
 }
 
+.jumbotron {
+  h1{
+    text-align: center;
+  }
+}
 input[type=submit] {
   font-size: 40px;
   font-weight: 900;
