--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,7 @@
     </div>
     <footer class=container>
       Built by <%= link_to 'masonforest', 'https://www.twitter.com/masonforest' %>
+      <p class=pull-right>BTC Available: <%= btc_remaining %> BTC</p>
     </footer>
   </div>
 
