--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,45 +14,56 @@
   </script>
 </head>
 <body>
-  <div>
-    <header class=container>
-    <div class=row>
-      <div class="col-xs-12">
-        <%= link_to root_path do %>
-          <%= image_tag 'logo.png', class: 'logo' %>
-          <h1>5K Bits</h1>
-        <% end %>
-        <nav>
-      </div>
-    </div>
-    <div class=row>
-      <div class="col-xs-12">
-        <nav class="navbar navbar-default" role="navigation">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
+    <!-- <div class=row> -->
+    <!--   <div class="col-xs-12"> -->
+    <!--     <%= link_to root_path do %> -->
+    <!--       <%= image_tag 'logo.png', class: 'logo' %> -->
+    <!--       <h1>5K Bits</h1> -->
+    <!--     <% end %> -->
+    <!--     <nav> -->
+    <!--   </div> -->
+    <!-- </div> -->
+    <!-- <div class=row> -->
+    <!--   <div class="col-xs-12"> -->
+    <!--     <nav class="navbar navbar-default" role="navigation"> -->
+    <!--       <div class="navbar-header"> -->
+    <!--         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> -->
+    <!--           <span class="sr-only">Toggle navigation</span> -->
+    <!--           <span class="icon-bar"></span> -->
+    <!--           <span class="icon-bar"></span> -->
+    <!--           <span class="icon-bar"></span> -->
+    <!--         </button> -->
+    <!--       </div> -->
 
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li><%= link_to 'Purchase bitcoins', root_path %></li>
-              <li><%= link_to 'List Transactions', transactions_path %></li>
-              <li><%= link_to 'About', page_path(:about) %></li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <div class=container>
-      <%= yield %>
+    <!--       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
+    <!--         <ul class="nav navbar-nav"> -->
+    <!--           <li><%= link_to 'Purchase bitcoins', root_path %></li> -->
+    <!--           <li><%= link_to 'List Transactions', transactions_path %></li> -->
+    <!--           <li><%= link_to 'About', page_path(:about) %></li> -->
+    <!--         </ul> -->
+    <!--       </div> -->
+    <!--     </nav> -->
+    <!--   </div> -->
+
+  <div class=container>
+    <h1>
+      <%= link_to root_path, class: 'logo' do %>
+        <span class="glyphicon glyphicon-fire"></span> 5KBits</h1>
+      <% end %>
+    <%= yield %>
     </div>
     <footer class=container>
-      Built by <%= link_to 'masonforest', 'https://www.twitter.com/masonforest' %>
-      <p class=pull-right>BTC Available: <%= btc_remaining %> BTC</p>
+    <div class=pull-left>
+      <div>
+        <%= link_to 'About', page_path(:about) %>
+        •
+        <%= link_to 'Transaction List', transactions_path %>
+      </div>
+    </div>
+    <div class=pull-right>
+      <div>BTC in hot wallet: <%= btc_remaining %> BTC</div>
+      <div>Built by <%= link_to '@masonforest', 'https://www.twitter.com/masonforest' %></div>
+    </div>
     </footer>
   </div>
 
