--- a/app/views/transactions/new.html.haml
+++ b/app/views/transactions/new.html.haml
@@ -2,24 +2,30 @@
   %h1 Sorry, there are no bitcoins left to sell at this exchange.
   %h1 Please check back soon.
 - else
-  .jumbotron
-    %h1 Buy 5000 Bits for $5
+  -# .jumbotron
+  .splash.centered
+    %h1
+      %span.five-dollors $5
+      %span.glyphicon.glyphicon-arrow-right
+      %span.five-bits ƀ5000
+    %h1.tagline Own bitcoins today.
   = simple_form_for @transaction_form, url: transactions_path do |f|
     = f.input :card_uri, as: :hidden
     .row
-      .col-xs-7
-        .row
-          .col-xs-12
-            %h1 Purchase form
+      .col-xs-6.col-xs-offset-3
+        -# .row
+        -#   .col-xs-12
+        -#     %h1 Buy 5000 bits for $5
         .row
           .col-xs-12
             = f.input :bitcoin_address, input_html: { value: ("1LoBLNKPEdy4GwYWdaDLaTRbB7BBC9dZP3" if Rails.env.development?) }
-      .col-xs-5
         = f.input :credit_card_number, input_html: { value: ('4111 1111 1111 1111' if Rails.env.development?), name: nil }
         .row
           .col-xs-6
             = f.input :expiration_date, input_html: { value: ('01 / 20' if Rails.env.development?) ,name: nil }
           .col-xs-6
             = f.input :cvc, input_html: { value: ('123' if Rails.env.development?), name: nil }
-        = f.submit class: 'btn btn-primary pull-right'
+        .row
+          .col-xs-12
+            = f.submit class: 'btn btn-primary pull-right'
 
